--- a/EstateAgency/mysite/coupon/templates/coupon.html
+++ b/EstateAgency/mysite/coupon/templates/coupon.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/coupons.css">
 </head>
 <body>
-    <h1 class="table-title">Promotional codes and coupons</h1>
-
+    <h1 class="table-caption">Promotional codes and coupons</h1>
     <table class="promo-table">
         <thead>
             <tr>
@@ -38,4 +37,5 @@
         </tbody>
     </table>
 </body>
+
 </html>
