--- a/EstateAgency/mysite/EstateAgency/templates/EstateAgency/agency_analyse.html
+++ b/EstateAgency/mysite/EstateAgency/templates/EstateAgency/agency_analyse.html
@@ -1,46 +1,10 @@
 {% extends 'EstateAgency/base_agency.html' %}
 
-{% block header %}
-
-.immovables-text {
-  font-size: 20px;
-  line-height: 1.5;
-  margin-bottom: 10px;
-  font-weight: bold;
-  color: #333; /* Dark gray text */
-}
-
-.immovables-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-top: 20px;
-  padding: 0;
-}
-
-.immovables-item {
-  cursor: pointer;
-  background-color: #f9f9f9; /* Light gray background */
-  padding: 20px;
-  text-align: center;
-  border: 2px solid #ddd; /* Light gray border */
-  border-radius: 10px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.immovables-item:hover {
-  transform: translateY(-5px); /* Slight lift on hover */
-  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1); /* Subtle box shadow on hover */
-}
-
-
-{% endblock %}
-
 {% block content %}
-<Label class="immovables-text" style="text-align: center;">Total earnings: {{total_earnings}}</Label><br>
-<Label class="immovables-text" style="text-align: center;">Average bill: {{average_bill}}</Label><br><br>
-<Label class="immovables-text" style="text-align: center;">The most popular object: {{most_popular_immovables}}</Label><br>
-<Label class="immovables-text" style="text-align: center;">It has a total of {{total_bookings}} bookings</Label><br>
+<label class="immovables-text" style="text-align: center;">Total earnings: {{total_earnings}}</label><br>
+<label class="immovables-text" style="text-align: center;">Average bill: {{average_bill}}</label><br><br>
+<label class="immovables-text" style="text-align: center;">The most popular object: {{most_popular_immovables}}</label><br>
+<label class="immovables-text" style="text-align: center;">It has a total of {{total_bookings}} bookings</label><br>
 
 <img src="data:image/png;base64,{{ plot_data }}">
 
