--- a/EstateAgency/mysite/auth_user/templates/logreg/log.html
+++ b/EstateAgency/mysite/auth_user/templates/logreg/log.html
@@ -1,13 +1,5 @@
 {% extends 'EstateAgency/base_agency.html' %}
 
-{% block header %}
-
-.horizontal-center {
-margin: 0 auto;
-display: table;
-}
-
-{% endblock %}
 
 {% block content %}
 <form method="post" class="horizontal-center">
@@ -17,7 +9,7 @@ display: table;
     <div class="form-error">{{ f.errors }}</div>
     {% endfor %}
 
-    <button class="button1">Sign In</button>
+    <button class="button">Sign In</button>
 </form>
 
 {% endblock %}
