--- a/EstateAgency/mysite/vacancy/templates/vacancy.html
+++ b/EstateAgency/mysite/vacancy/templates/vacancy.html
@@ -7,9 +7,9 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="container background-rotate">
 <h1>List of vacancies</h1>
-<ul class="vacancy-container">
+<ul class="vacancy-list">
     {% for vacancy in vacancies %}
     <li class="vacancy-item" itemscope itemtype="http://schema.org/JobPosting">
         <h2 class="vacancy-title" itemprop="title">{{ vacancy.title }}</h2>
@@ -17,7 +17,6 @@
         <p class="vacancy-requirements">Requirements: <span class="vacancy-qualifications" itemprop="qualifications">{{ vacancy.requirements }}</span></p>
     </li>
     {% endfor %}
-    <div class="clearfix"></div> <!-- Очистка плавающих блоков -->
 </ul>
-
+</div>
 {% endblock %}
