--- a/EstateAgency/mysite/static/css/agency_list.css
+++ b/EstateAgency/mysite/static/css/agency_list.css
@@ -48,3 +48,10 @@
 .immovables-card:hover .immovables-info {
   display: block;
 }
+
+/* Стили для анимаций при скроллинге */
+.scroll-animation {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: transform 0.5s, opacity 0.5s;
+}
