--- a/EstateAgency/mysite/auth_user/templates/logreg/log.html
+++ b/EstateAgency/mysite/auth_user/templates/logreg/log.html
@@ -1,5 +1,8 @@
 {% extends 'EstateAgency/base_agency.html' %}
 
+{% block head %}
+<link rel="stylesheet" type="text/css" href="/static/css/log.css">
+{% endblock %}
 
 {% block content %}
 <form method="post" class="horizontal-center">
