--- a/EstateAgency/mysite/static/css/coupons.css
+++ b/EstateAgency/mysite/static/css/coupons.css
@@ -5,6 +5,11 @@ table {
   margin: 0; /* Убираем внешние отступы таблицы */
 }
 
+/*
+h2>h3{
+    text-align:center;
+}
+*/
 
 /* Стили для ячеек с фоном в пустых ячейках */
 td:empty {
