--- a/EstateAgency/mysite/main/templates/main.html
+++ b/EstateAgency/mysite/main/templates/main.html
@@ -20,8 +20,8 @@
         </aside>
 
         <section id="top">
-          <img src="https://aryan-tayal.github.io/Mountains-Parallax/bg.jpg" id="bg" />
-          <h2 id="text">Mountains</h2>
+          <img src="/static/js_pictures/natural-gradient-wallpaper.jpg" id="bg" />
+          <h2 id="text">Estate Agency</h2>
           <img src="https://aryan-tayal.github.io/Mountains-Parallax/man.png" id="man" />
           <img src="https://aryan-tayal.github.io/Mountains-Parallax/clouds_1.png" id="clouds_1" />
           <img src="https://aryan-tayal.github.io/Mountains-Parallax/clouds_2.png" id="clouds_2" />
