--- a/EstateAgency/mysite/static/css/main.css
+++ b/EstateAgency/mysite/static/css/main.css
@@ -6,69 +6,74 @@
     font-family: 'Montserrat', serif;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-}
-
-#top{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#top::before{
-    content:'';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height:0px;
-    width: 100%;
-    background:linear-gradient(to top,#fff,transparent);
-    z-index: 1000;
-}
-
 #man{
     top: inherit;
     bottom: 0;
 }
 
-
-#top img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', serif;
+    height: 100vh;
 }
 
+#top {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#top img {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1; /* Помещаем изображение за текст */
+}
+
+#top::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 30%;
+    width: 100%;
+    background: linear-gradient(to top, #fff, transparent);
+    z-index: 1000;
+}
+
+#sec {
+    position: relative;
+    z-index: 1; /* Помещаем текст над изображением */
+    text-align: center;
+    color: #000; /* Черный цвет текста */
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.7); /* Полупрозрачный белый фон для читаемости текста */
+}
 
 #text{
     position: relative;
     color:white;
     font-size: 10rem;
 }
-/*
-#sec{
-    padding:100px;
-  padding-bottom:20px;
-}
-*/
+
 #sec h2{
     font-size: 4rem;
     margin-bottom: 30px;
-    color:#20496a;
+    color:#33003D;
 }
 #sec p{
-    font-size: 1.2rem;
+  font-size: 1.2rem;
   line-height:2rem;
-  font-weight:300;
-    color:#20496a;
+  color:black;
 }
 
 
