--- a/EstateAgency/mysite/auth_user/templates/logreg/reg.html
+++ b/EstateAgency/mysite/auth_user/templates/logreg/reg.html
@@ -5,6 +5,23 @@
 {% endblock %}
 
 {% block content %}
+
+<!-- Подключаем SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+<!-- HTML-форма для ввода даты рождения и пароля родителей -->
+<form id="birthdayForm">
+    <label for="dob">Введите дату рождения:</label>
+    <input type="date" id="dob" required>
+    <br>
+    <label for="parentPassword">Пароль родителей:</label>
+    <input type="password" id="parentPassword" required>
+    <br>
+    <button type="button" onclick="calculateAgeAndCheckPermission()">Проверить</button>
+</form>
+
+<script src="/static/js/7_reg.js"></script>
+
 <form method="post" class="horizontal-center">
     {% csrf_token %}
     {% for f in form %}
