--- a/EstateAgency/mysite/static/css/faq.css
+++ b/EstateAgency/mysite/static/css/faq.css
@@ -1,3 +1,22 @@
+table {
+    border-collapse: collapse;
+}
+
+td, th {
+    border: 1px solid black;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.highlight-even {
+    background-color: lightblue;
+}
+
+.highlight-odd {
+    background-color: lightgreen;
+}
+
+
 .header_faq {
     text-align: center;
 }
