--- a/EstateAgency/mysite/about/templates/about.html
+++ b/EstateAgency/mysite/about/templates/about.html
@@ -158,8 +158,9 @@
     <p align="right" class="requisites"><small>Tel. +375 (29) 849-40-96</small></p>
     <p align="right" class="requisites">e-mail: office@cinema.by<small></small></p>
 </div>
-
-
-
 </div>
+
+<h1>Result task</h1>
+<script src="/static/js/result_task.js"></script>
+
 {% endblock %}
