--- a/EstateAgency/mysite/EstateAgency/templates/EstateAgency/immovables_detail.html
+++ b/EstateAgency/mysite/EstateAgency/templates/EstateAgency/immovables_detail.html
@@ -1,30 +1,10 @@
 {% extends 'EstateAgency/base_agency.html' %}
 
 {% block header %}
-
-.immovables-image {
-  width: 250px; /* Slightly reduced width for better proportion */
-  height: 250px; /* Slightly reduced height for better proportion */
-  background-color: #f2f2f2; /* Lighter background color */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  border-radius: 10px; /* Rounded corners for a softer look */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-}
-
-.immovables-text {
-  font-size: 22px; /* Slightly reduced font size for better proportion */
-  line-height: 1.3; /* Adjusted line height for readability */
-  margin-bottom: 10px; /* Increased margin for spacing */
-  text-align: center;
-}
-
-
 {% endblock %}
 
 {% block content %}
+<script src="/static/js/6_promocode_immovables_detail.js"></script>
 {% load static %}
 <img src="/{{ form.photo }}"
      alt="My image" class="immovables-image">
@@ -52,7 +32,23 @@
             <label>Has_child:</label>
             <input type="checkbox" name="has_child" ><br>
 
-            <button class="button1" name="book_immovables">Book estate object</button>
+            <button name="book_immovables">Book estate object</button>
+
+            <br>
+
+            <label for="immovablesOriginalPrice">Cost of the product:</label>
+            <input type="number" id="immovablesOriginalPrice" value="{{ form.price }}" readonly>
+
+            <br>
+
+            <label for="immovablesPromoCode">Enter promo (For example: 10[%]):</label>
+            <input type="number" id="immovablesPromoCode" placeholder="Enter your promo code">
+
+            <br>
+
+            <button onclick="calculateDiscount()">Calculate discount</button>
+
+            <p id="immovablesResult"></p>
 
         </div>
     </form>
@@ -79,7 +75,7 @@
             {% endfor %}
         </select><br>
 
-        <button class="button1" name="edit_immovables">Edit</button>
+        <button name="edit_immovables">Edit</button>
     </div>
 </form>
 {%endif%}
